# bevy-jam2

./: Cargo.toml
.github/workflows/: release-gh-pages.yml
assets/map/: map.ldtk
assets/map/map/simplified/Basement/: data.json
assets/map/map/simplified/Elevator/: Collisions.csv  data.json
assets/map/map/simplified/Entrance/: Collisions.csv  data.json
assets/map/map/simplified/I_see_dead_people/: Collisions.csv  data.json
launchers/native/: Cargo.toml
launchers/wasm/: Cargo.toml
src/: input.rs  lib.rs  map.rs  movement.rs  player.rs
src/network/: client.rs  error.rs  server.rs  shared.rs
