[package]
name = "my-game"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["launchers/wasm", "launchers/native"]

[[bin]]
name = "native-launcher"
path = "launchers/native/src/main.rs"

# Optimizations for WASM
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
bevy = "0.8.1"
image = "0.24.5"
winit = "0.26.1"
bevy_asset_loader = "0.13.0"
bevy_ecs_ldtk = "0.4.0"
leafwing-input-manager = "0.6.1"
bevy_renet = "0.0.5"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
bevy_framepace = "0.7.0"

[patch.crates-io]
wgpu = { git = "https://github.com/mockersf/wgpu/", branch = "unconditional-clear-workaround" }
